--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -13001,3 +13001,11 @@ fieldset#edit-xmlsitemap {
 .form-field-name-field-newsl-newsletter-content .description {
   left: 1024px !important;
 }
+
+.region-sidebar-second .block-itg-layout-manager h2 + div {
+  height: 185px;
+}
+.region-sidebar-second .block-itg-layout-manager h2 + div #autocomplete {
+  max-height: 140px;
+  overflow-y: auto;
+}
