--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -12201,3 +12201,12 @@ fieldset#edit-xmlsitemap{
   }
 }
 .form-field-name-field-newsl-newsletter-content .description { left:1024px !important;}
+.region-sidebar-second{
+  .block-itg-layout-manager h2 + div{
+    height: 185px;
+    #autocomplete{
+      max-height: 140px;
+      overflow-y: auto;
+    }
+  }
+}
