ITG-4069 #time 30m #comment Done.

--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -433,6 +433,19 @@
     font-size: 11px;
   }
   /*search page css end */
+  
+  /* Scroll bar css */
+  ::-webkit-scrollbar{
+    width: 5px;
+  }
+  ::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #ddd;
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #aaa;
+  }
 }   
 
 
