--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -9058,6 +9058,7 @@ div#playerContainer{
           height: 0;
           padding-bottom: 48.3%;
           position: relative;
+          display: table;
             iframe{
               width: 100%;
               height: 100%;
