ITG-4066 #time 1h #comment done.

--- a/sites/all/themes/itg/css/layout-manager.css
+++ b/sites/all/themes/itg/css/layout-manager.css
@@ -2736,7 +2736,7 @@ img {
 .election-page .itg-map #map-state {
   position: absolute;
   right: 0;
-  top: 0;
+  top: -16px;
   height: 20px;
   line-height: 20px;
   padding: 0;
