--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -10855,7 +10855,7 @@ section.sidebar .block-itg-ads {
 .election-page .itg-map #map-state {
   position: absolute;
   right: 0;
-  top: 0;
+  top: -16px;
   height: 20px;
   line-height: 20px;
   padding: 0;
@@ -14794,6 +14794,12 @@ span.see-picture a:after {
   -moz-user-select: auto;
   -ms-user-select: auto;
   user-select: auto !important;
+}
+
+.yearende_left_top_news h4.heading {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 @media (min-width: 320px) {
