--- a/sites/all/themes/itg/sass/layout-manager.scss
+++ b/sites/all/themes/itg/sass/layout-manager.scss
@@ -2425,7 +2425,7 @@ img{
         #map-state{
             position: absolute;
             right: 0;
-            top: 0;
+            top: -16px;
             height: 20px;
             line-height: 20px;
             padding: 0;
