ITG-3241 #time 4h #comment Done.

--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11924,6 +11924,7 @@ span.close_btt {
 .ad-blocker-content {
     position: relative;
     padding-top: 35px;
+    word-wrap: break-word;
 }
 .ad-blocker-content:after {
     content: '';
