--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -14618,6 +14618,7 @@ span.close_btt {
 .ad-blocker-content {
   position: relative;
   padding-top: 35px;
+  word-wrap: break-word;
 }
 
 .ad-blocker-content:after {
